# file-get-contents

./: .gitignore  Makefile.am  README.md  configure.ac
src/: file-get-contents.c  file-get-contents.h
src/tests/: file-not-found.c  read-empty-file.c  read-file.c
